# CREDO

./: .gitignore  README.md  pyproject.toml  run_experiments.sh  run_experiments_adaptive.sh  run_experiments_disentangle.sh  run_specific_experiment.sh
comparisons/: adap_gamma_comp.py  all_results.ipynb  checkpoint_viewer.py  credo_comparisons.py  decomp_comparison.py  epic.py  get_decomp_results.py  get_results.py  helper.py  uacqr.py
data/data_scripts/: download.py  download_data.sh  process.py
experiments/: bart_and_GP_testing.py  comparison_UACQR.py  comparison_illustration.py  comparisson_UACQR.py  credal_sets_testing.py  credo_illustration_scheme.py  credo_versus_cqr.py  decomp_and_gamma_results.py  helper.py  proof_of_concepts_and_tests.py  uacqr.py
results/WEC_catboost_summary/: WEC_coverage_outlier_summary.csv  WEC_coverage_summary.csv  WEC_isl_summary.csv  WEC_ratio_outlier_summary.csv
results/airfoil_catboost_summary/: airfoil_coverage_outlier_summary.csv  airfoil_coverage_summary.csv  airfoil_isl_summary.csv  airfoil_ratio_outlier_summary.csv
results/concrete_catboost_summary/: concrete_coverage_outlier_summary.csv  concrete_coverage_summary.csv  concrete_isl_summary.csv  concrete_ratio_outlier_summary.csv
results/cycle_catboost_summary/: cycle_coverage_outlier_summary.csv  cycle_coverage_summary.csv  cycle_isl_summary.csv  cycle_ratio_outlier_summary.csv
results/electric_catboost_summary/: electric_coverage_outlier_summary.csv  electric_coverage_summary.csv  electric_isl_summary.csv  electric_ratio_outlier_summary.csv
results/final_tables/: result_aisl.pkl  result_cover.pkl  result_cover_outlier.pkl  result_ratio_outlier.pkl
results/homes_catboost_summary/: homes_coverage_outlier_summary.csv  homes_coverage_summary.csv  homes_isl_summary.csv  homes_ratio_outlier_summary.csv
results/meps19_catboost_summary/: meps19_coverage_outlier_summary.csv  meps19_coverage_summary.csv  meps19_isl_summary.csv  meps19_ratio_outlier_summary.csv
results/protein_catboost_summary/: protein_coverage_outlier_summary.csv  protein_coverage_summary.csv  protein_isl_summary.csv  protein_ratio_outlier_summary.csv
results/star_catboost_summary/: star_coverage_outlier_summary.csv  star_coverage_summary.csv  star_isl_summary.csv  star_ratio_outlier_summary.csv
results/superconductivity_catboost_summary/: superconductivity_coverage_outlier_summary.csv  superconductivity_coverage_summary.csv  superconductivity_isl_summary.csv  superconductivity_ratio_outlier_summary.csv
results/winered_catboost_summary/: winered_coverage_outlier_summary.csv  winered_coverage_summary.csv  (+2 more)
(+12 files in other folders)
