[project]
name = "credal_conformal_prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Luben M. C. Cabezas",email = "lucruz45.cab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.12.2",
    "tqdm>=4.66.5",
    "torch>=2.3.1",
    "gpytorch>=1.13",
    "pymc",
    "pymc-bart",
    "arviz",
    "pyqt5 (>=5.15.11,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "credal_cp"
version = "0.1.0"
description = "Local Epistemic Uncertainty in Regression Conformal Prediction via Imprecise Probabilities and Credal Sets."
authors = ["Luben M. C. Cabezas <lucruz45.cab@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "credal_cp", from = "src" }
]


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
catboost = "^1.2.8"
lightgbm = "^4.6.0"
sklearn_quantile = "^0.1.1"
